--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.5)
 
 project( EOS )
 
-add_subdirectory(programs)
+add_subdirectory( libraries )
+add_subdirectory( programs )
 
