--- a/programs/nodeos/CMakeLists.txt
+++ b/programs/nodeos/CMakeLists.txt
@@ -1,1 +1,8 @@
-add_executable( nodeos main.cpp)
+add_executable( nodeos main.cpp )
+
+target_link_libraries( nodeos 
+	PRIVATE appbase )
+
+target_include_directories(nodeos PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+
